data/derived/comb/progs/unify/prog8788.ml.out
Characters 78-79:
  | h::t -> matchHeads (h::t);;
                        ^
Error: This expression has type char but an expression was expected of type
         'a list
